# hpc

./: .gitattributes  .gitignore  .vimrc  README.md
class/pthreads/: pthreads  pthreads.c
final_prep/: benchmarks.md  introduction.md  optimization.md  threads.md
final_prep/.obsidian/: workspace.json
matrix_power/: .gitignore  CMakeLists.txt  README.md  TODO.txt  bench_script.sh  benchmark.sh  build.sh  matrix_power.py
matrix_power/bench/: bench.f90  benchmarks.csv
matrix_power/report/: nathan_chapman_lab1.tex  plotting.nb  report.tex
matrix_power/src/: bench.f90  io.f90  main.f90  matrices.f90  matrices_module.f90  matrix_power.f90  matrix_power.py  matrix_power_python.py
matrix_power_multithreaded/: .gitignore  Project.toml  README.md  bench.sh  bench_results.csv  plots.nb
matrix_power_multithreaded/bench/: bench_results_big_dim.csv
matrix_power_multithreaded/report/: plots.nb  report.tex
matrix_power_multithreaded/src/: MatrixPowerMultiThreaded.jl  MatrixPowerMultiThreadedScript.jl  matrix.jl  matrix_power_multithreaded.jl
matrix_power_optimized/: CMakeLists.txt  Doxyfile  README.md  TODO.txt  bench_script.sh  build.sh
matrix_power_optimized/bench/: bench.f90  benchmarks.csv  benchmarks_O1.csv  benchmarks_O2.csv
matrix_power_optimized/report/: bib.bib  nathan_chapman_lab3.tex
matrix_power_optimized/src/: main.f90  matrices_module.f90  matrix_power_log.f90
matrix_power_optimized/test/: matrix_power_log
my_first_fortran/: arithmetic.f90  hello.f90  read_value.f90  variables.f90
sem_1/: sem_1.code-workspace
sem_1/report/: bib.bib  (+1 more)
(+18 files in other folders)
